crates/uitest/fixtures/ty_check/storage_map_wrong_provider.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/storage_map_wrong_provider.fe
---
error[8-0038]: effect `StorageMap<u256, u256, BALANCES_ROOT>` provided to `needs_balances` has type `StorageMap<u256, u256, 1>`, but `StorageMap<u256, u256, 0>` is required
   ┌─ storage_map_wrong_provider.fe:21:17
   │
20 │             with (StorageMap<u256, u256, BALANCES_ROOT> = allowances) {
   │                                                           ---------- effect `StorageMap<u256, u256, BALANCES_ROOT>` is provided here
21 │                 needs_balances()
   │                 ^^^^^^^^^^^^^^^^ expected `StorageMap<u256, u256, 0>` for effect `StorageMap<u256, u256, BALANCES_ROOT>`, found `StorageMap<u256, u256, 1>`
